--- a/report/contracts/FastLaneAuction.sol.func-sort-c.html
+++ b/report/contracts/FastLaneAuction.sol.func-sort-c.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">115</td>
-            <td class="headerCovTableEntry">151</td>
-            <td class="headerCovTableEntryMed">76.2 %</td>
+            <td class="headerCovTableEntry">150</td>
+            <td class="headerCovTableEntry">162</td>
+            <td class="headerCovTableEntryHi">92.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-07-22 12:21:44</td>
+            <td class="headerValue">2022-07-25 21:59:02</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">24</td>
-            <td class="headerCovTableEntry">35</td>
-            <td class="headerCovTableEntryLo">68.6 %</td>
+            <td class="headerCovTableEntry">33</td>
+            <td class="headerCovTableEntry">38</td>
+            <td class="headerCovTableEntryMed">86.8 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">49</td>
-            <td class="headerCovTableEntry">66</td>
-            <td class="headerCovTableEntryLo">74.2 %</td>
+            <td class="headerCovTableEntry">62</td>
+            <td class="headerCovTableEntry">74</td>
+            <td class="headerCovTableEntryMed">83.8 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,144 +69,156 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#660">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#683">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#686">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#709">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#648">FastLaneAuction.findLiveAuctionTopBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#671">FastLaneAuction.findLiveAuctionTopBid</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#638">FastLaneAuction.getActivePrivilegesAuctionNumber</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#661">FastLaneAuction.getActivePrivilegesAuctionNumber</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#596">FastLaneAuction.processAutopayJobs</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#230">FastLaneAuction.setBidToken</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#223">FastLaneAuction.setBidToken</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#192">FastLaneAuction.setMinimumBidIncrement</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#186">FastLaneAuction.setPausedState</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#204">FastLaneAuction.setResolverMaxGasPrice</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#352">FastLaneAuction.withdrawStuckERC20</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#341">FastLaneAuction.withdrawStuckNativeToken</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#633">FastLaneAuction.getValidatorsActiveAtAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#199">FastLaneAuction.setOps</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#332">FastLaneAuction.setAutopayBatchSize</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#187">FastLaneAuction.setPausedState</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#289">FastLaneAuction.disableValidatorAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#348">FastLaneAuction.withdrawStuckNativeToken</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#296">FastLaneAuction.disableValidatorAddress</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#628">FastLaneAuction.getStatus</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#651">FastLaneAuction.getStatus</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#198">FastLaneAuction.setMinimumAutoShipThreshold</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#656">FastLaneAuction.getValidatorsActiveAtAuction</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#337">FastLaneAuction.setOffchainCheckerDisabledState</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#339">FastLaneAuction.setAutopayBatchSize</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#248">FastLaneAuction.disableOpportunityAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#193">FastLaneAuction.setMinimumBidIncrement</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#344">FastLaneAuction.setOffchainCheckerDisabledState</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#211">FastLaneAuction.setResolverMaxGasPrice</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#359">FastLaneAuction.withdrawStuckERC20</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#255">FastLaneAuction.disableOpportunityAddress</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#178">FastLaneAuction.setValidatorPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#610">FastLaneAuction.processAutopayJobs</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#280">FastLaneAuction.enableValidatorAddressWithPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#205">FastLaneAuction.setMinimumAutoShipThreshold</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#179">FastLaneAuction.setValidatorPreferences</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#211">FastLaneAuction.setFastlaneFee</a></td>
-              <td class="coverFnHi">4</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#397">FastLaneAuction._refundPreviousBidder</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#405">FastLaneAuction._refundPreviousBidder</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#573">FastLaneAuction.checker</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#287">FastLaneAuction.enableValidatorAddressWithPreferences</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#604">FastLaneAuction.getAutopayJobs</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#218">FastLaneAuction.setFastlaneFee</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#166">FastLaneAuction._updateValidatorPreferences</a></td>
-              <td class="coverFnHi">7</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#643">FastLaneAuction.getCheckpoint</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#167">FastLaneAuction._updateValidatorPreferences</a></td>
               <td class="coverFnHi">9</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#517">FastLaneAuction.redeemOutstandingBalance</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#666">FastLaneAuction.getCheckpoint</a></td>
+              <td class="coverFnHi">10</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#572">FastLaneAuction.redeemOutstandingBalance</a></td>
               <td class="coverFnHi">11</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#238">FastLaneAuction.enableOpportunityAddress</a></td>
-              <td class="coverFnHi">13</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#587">FastLaneAuction.checker</a></td>
+              <td class="coverFnHi">12</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#273">FastLaneAuction.enableValidatorAddress</a></td>
-              <td class="coverFnHi">13</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#628">FastLaneAuction.getAutopayJobs</a></td>
+              <td class="coverFnHi">12</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#308">FastLaneAuction.endAuction</a></td>
-              <td class="coverFnHi">13</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#422">FastLaneAuction._redeemOutstanding</a></td>
+              <td class="coverFnHi">14</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#302">FastLaneAuction.startAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#280">FastLaneAuction.enableValidatorAddress</a></td>
+              <td class="coverFnHi">14</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#245">FastLaneAuction.enableOpportunityAddress</a></td>
               <td class="coverFnHi">15</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#260">FastLaneAuction._enableValidatorCheckpoint</a></td>
-              <td class="coverFnHi">17</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#315">FastLaneAuction.endAuction</a></td>
+              <td class="coverFnHi">15</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#366">FastLaneAuction._receiveBid</a></td>
-              <td class="coverFnHi">25</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#267">FastLaneAuction._enableValidatorCheckpoint</a></td>
+              <td class="coverFnHi">19</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#417">FastLaneAuction.submitBid</a></td>
-              <td class="coverFnHi">31</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#309">FastLaneAuction.startAuction</a></td>
+              <td class="coverFnHi">21</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#406">FastLaneAuction._calculateCuts</a></td>
-              <td class="coverFnHi">34</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#374">FastLaneAuction._receiveBid</a></td>
+              <td class="coverFnHi">29</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#419">FastLaneAuction._checkRedeemableOutstanding</a></td>
+              <td class="coverFnHi">32</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#473">FastLaneAuction.submitBid</a></td>
+              <td class="coverFnHi">35</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#414">FastLaneAuction._calculateCuts</a></td>
+              <td class="coverFnHi">38</td>
             </tr>
   </table>
   <br>
