--- a/report/index.html
+++ b/report/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">115</td>
-            <td class="headerCovTableEntry">151</td>
-            <td class="headerCovTableEntryMed">76.2 %</td>
+            <td class="headerCovTableEntry">150</td>
+            <td class="headerCovTableEntry">162</td>
+            <td class="headerCovTableEntryHi">92.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-07-22 12:21:44</td>
+            <td class="headerValue">2022-07-25 21:59:02</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">24</td>
-            <td class="headerCovTableEntry">35</td>
-            <td class="headerCovTableEntryLo">68.6 %</td>
+            <td class="headerCovTableEntry">33</td>
+            <td class="headerCovTableEntry">38</td>
+            <td class="headerCovTableEntryMed">86.8 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">49</td>
-            <td class="headerCovTableEntry">66</td>
-            <td class="headerCovTableEntryLo">74.2 %</td>
+            <td class="headerCovTableEntry">62</td>
+            <td class="headerCovTableEntry">74</td>
+            <td class="headerCovTableEntryMed">83.8 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,14 @@
     <tr>
       <td class="coverFile"><a href="contracts/index.html">contracts</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=76 height=10 alt="76.2%"><img src="snow.png" width=24 height=10 alt="76.2%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=93 height=10 alt="92.6%"><img src="snow.png" width=7 height=10 alt="92.6%"></td></tr></table>
       </td>
-      <td class="coverPerMed">76.2&nbsp;%</td>
-      <td class="coverNumMed">115 / 151</td>
-      <td class="coverPerLo">68.6&nbsp;%</td>
-      <td class="coverNumLo">24 / 35</td>
-      <td class="coverPerLo">74.2&nbsp;%</td>
-      <td class="coverNumLo">49 / 66</td>
+      <td class="coverPerHi">92.6&nbsp;%</td>
+      <td class="coverNumHi">150 / 162</td>
+      <td class="coverPerMed">86.8&nbsp;%</td>
+      <td class="coverNumMed">33 / 38</td>
+      <td class="coverPerMed">83.8&nbsp;%</td>
+      <td class="coverNumMed">62 / 74</td>
     </tr>
   </table>
   </center>
