--- a/report/contracts/FastLaneAuction.sol.func.html
+++ b/report/contracts/FastLaneAuction.sol.func.html
@@ -37,21 +37,21 @@
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-07-25 21:59:02</td>
+            <td class="headerValue">2022-07-26 00:09:48</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">33</td>
-            <td class="headerCovTableEntry">38</td>
-            <td class="headerCovTableEntryMed">86.8 %</td>
+            <td class="headerCovTableEntry">34</td>
+            <td class="headerCovTableEntry">39</td>
+            <td class="headerCovTableEntryMed">87.2 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">62</td>
-            <td class="headerCovTableEntry">74</td>
-            <td class="headerCovTableEntryMed">83.8 %</td>
+            <td class="headerCovTableEntry">63</td>
+            <td class="headerCovTableEntry">72</td>
+            <td class="headerCovTableEntryMed">87.5 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -70,23 +70,23 @@
     </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#414">FastLaneAuction._calculateCuts</a></td>
-              <td class="coverFnHi">38</td>
+              <td class="coverFnHi">41</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#419">FastLaneAuction._checkRedeemableOutstanding</a></td>
-              <td class="coverFnHi">32</td>
+              <td class="coverFnHi">47</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#267">FastLaneAuction._enableValidatorCheckpoint</a></td>
-              <td class="coverFnHi">19</td>
+              <td class="coverFnHi">21</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#374">FastLaneAuction._receiveBid</a></td>
-              <td class="coverFnHi">29</td>
+              <td class="coverFnHi">32</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#422">FastLaneAuction._redeemOutstanding</a></td>
-              <td class="coverFnHi">14</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#423">FastLaneAuction._redeemOutstanding</a></td>
+              <td class="coverFnHi">16</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#405">FastLaneAuction._refundPreviousBidder</a></td>
@@ -94,15 +94,15 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#167">FastLaneAuction._updateValidatorPreferences</a></td>
-              <td class="coverFnHi">9</td>
+              <td class="coverFnHi">11</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#587">FastLaneAuction.checker</a></td>
-              <td class="coverFnHi">12</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#588">FastLaneAuction.checker</a></td>
+              <td class="coverFnHi">17</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#255">FastLaneAuction.disableOpportunityAddress</a></td>
-              <td class="coverFnHi">3</td>
+              <td class="coverFnHi">4</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#296">FastLaneAuction.disableValidatorAddress</a></td>
@@ -110,7 +110,7 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#245">FastLaneAuction.enableOpportunityAddress</a></td>
-              <td class="coverFnHi">15</td>
+              <td class="coverFnHi">17</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#280">FastLaneAuction.enableValidatorAddress</a></td>
@@ -118,22 +118,22 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#287">FastLaneAuction.enableValidatorAddressWithPreferences</a></td>
-              <td class="coverFnHi">5</td>
+              <td class="coverFnHi">7</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#315">FastLaneAuction.endAuction</a></td>
-              <td class="coverFnHi">15</td>
+              <td class="coverFnHi">20</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#683">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#688">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#709">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#714">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#671">FastLaneAuction.findLiveAuctionTopBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#676">FastLaneAuction.findLiveAuctionTopBid</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
@@ -141,12 +141,16 @@
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#628">FastLaneAuction.getAutopayJobs</a></td>
-              <td class="coverFnHi">12</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#629">FastLaneAuction.getAutopayJobs</a></td>
+              <td class="coverFnHi">22</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#666">FastLaneAuction.getCheckpoint</a></td>
-              <td class="coverFnHi">10</td>
+              <td class="coverFnHi">13</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#671">FastLaneAuction.getPreferences</a></td>
+              <td class="coverFnHi">1</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#651">FastLaneAuction.getStatus</a></td>
@@ -154,19 +158,19 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#656">FastLaneAuction.getValidatorsActiveAtAuction</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#610">FastLaneAuction.processAutopayJobs</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#572">FastLaneAuction.redeemOutstandingBalance</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#611">FastLaneAuction.processAutopayJobs</a></td>
+              <td class="coverFnHi">5</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#573">FastLaneAuction.redeemOutstandingBalance</a></td>
               <td class="coverFnHi">11</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#339">FastLaneAuction.setAutopayBatchSize</a></td>
-              <td class="coverFnHi">2</td>
+              <td class="coverFnHi">3</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#230">FastLaneAuction.setBidToken</a></td>
@@ -174,11 +178,11 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#218">FastLaneAuction.setFastlaneFee</a></td>
-              <td class="coverFnHi">5</td>
+              <td class="coverFnHi">6</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#205">FastLaneAuction.setMinimumAutoShipThreshold</a></td>
-              <td class="coverFnHi">3</td>
+              <td class="coverFnHi">4</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#193">FastLaneAuction.setMinimumBidIncrement</a></td>
@@ -206,11 +210,11 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#309">FastLaneAuction.startAuction</a></td>
-              <td class="coverFnHi">21</td>
+              <td class="coverFnHi">27</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#473">FastLaneAuction.submitBid</a></td>
-              <td class="coverFnHi">35</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#474">FastLaneAuction.submitBid</a></td>
+              <td class="coverFnHi">40</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#359">FastLaneAuction.withdrawStuckERC20</a></td>
