Move to custom errors
Add natspec

--- a/report/contracts/FastLaneAuction.sol.func.html
+++ b/report/contracts/FastLaneAuction.sol.func.html
@@ -31,18 +31,18 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">159</td>
-            <td class="headerCovTableEntry">162</td>
-            <td class="headerCovTableEntryHi">98.1 %</td>
+            <td class="headerCovTableEntry">175</td>
+            <td class="headerCovTableEntry">175</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-07-27 12:21:00</td>
+            <td class="headerValue">2022-08-30 00:50:20</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">38</td>
-            <td class="headerCovTableEntry">39</td>
-            <td class="headerCovTableEntryHi">97.4 %</td>
+            <td class="headerCovTableEntry">41</td>
+            <td class="headerCovTableEntry">41</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr>
             <td></td>
@@ -50,8 +50,8 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">66</td>
-            <td class="headerCovTableEntry">72</td>
-            <td class="headerCovTableEntryHi">91.7 %</td>
+            <td class="headerCovTableEntry">74</td>
+            <td class="headerCovTableEntryMed">89.2 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,159 +69,167 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="FastLaneAuction.sol.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#415">FastLaneAuction._calculateCuts</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#556">FastLaneAuction._calculateCuts</a></td>
               <td class="coverFnHi">41</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#420">FastLaneAuction._checkRedeemableOutstanding</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#566">FastLaneAuction._checkRedeemableOutstanding</a></td>
               <td class="coverFnHi">47</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#268">FastLaneAuction._enableValidatorCheckpoint</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#384">FastLaneAuction._enableValidatorCheckpoint</a></td>
               <td class="coverFnHi">21</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#375">FastLaneAuction._receiveBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#519">FastLaneAuction._receiveBid</a></td>
               <td class="coverFnHi">32</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#424">FastLaneAuction._redeemOutstanding</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#573">FastLaneAuction._redeemOutstanding</a></td>
               <td class="coverFnHi">16</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#406">FastLaneAuction._refundPreviousBidder</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#544">FastLaneAuction._refundPreviousBidder</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#166">FastLaneAuction._updateValidatorPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#251">FastLaneAuction._updateValidatorPreferences</a></td>
               <td class="coverFnHi">11</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#589">FastLaneAuction.checker</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#740">FastLaneAuction.checker</a></td>
               <td class="coverFnHi">17</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#256">FastLaneAuction.disableOpportunityAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#369">FastLaneAuction.disableOpportunityAddress</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#297">FastLaneAuction.disableValidatorAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#422">FastLaneAuction.disableValidatorAddress</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#246">FastLaneAuction.enableOpportunityAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#356">FastLaneAuction.enableOpportunityAddress</a></td>
               <td class="coverFnHi">17</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#281">FastLaneAuction.enableValidatorAddress</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#399">FastLaneAuction.enableValidatorAddress</a></td>
               <td class="coverFnHi">14</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#288">FastLaneAuction.enableValidatorAddressWithPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#411">FastLaneAuction.enableValidatorAddressWithPreferences</a></td>
               <td class="coverFnHi">7</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#316">FastLaneAuction.endAuction</a></td>
-              <td class="coverFnHi">20</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#444">FastLaneAuction.endAuction</a></td>
+              <td class="coverFnHi">21</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#689">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
-              <td class="coverFnHi">3</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#869">FastLaneAuction.findFinalizedAuctionWinnerAtAuction</a></td>
+              <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#715">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#898">FastLaneAuction.findLastFinalizedAuctionWinner</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#677">FastLaneAuction.findLiveAuctionTopBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#852">FastLaneAuction.findLiveAuctionTopBid</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#662">FastLaneAuction.getActivePrivilegesAuctionNumber</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#830">FastLaneAuction.getActivePrivilegesAuctionNumber</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#630">FastLaneAuction.getAutopayJobs</a></td>
-              <td class="coverFnHi">22</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#790">FastLaneAuction.getAutopayJobs</a></td>
+              <td class="coverFnHi">7</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#667">FastLaneAuction.getCheckpoint</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#837">FastLaneAuction.getCheckpoint</a></td>
               <td class="coverFnHi">13</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#672">FastLaneAuction.getPreferences</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#844">FastLaneAuction.getPreferences</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#652">FastLaneAuction.getStatus</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#815">FastLaneAuction.getStatus</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#657">FastLaneAuction.getValidatorsActiveAtAuction</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#823">FastLaneAuction.getValidatorsactiveAtAuctionRound</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#612">FastLaneAuction.processAutopayJobs</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#172">FastLaneAuction.initialSetupAuction</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#766">FastLaneAuction.processAutopayJobs</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#574">FastLaneAuction.redeemOutstandingBalance</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#724">FastLaneAuction.redeemOutstandingBalance</a></td>
               <td class="coverFnHi">11</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#340">FastLaneAuction.setAutopayBatchSize</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#471">FastLaneAuction.setAutopayBatchSize</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#231">FastLaneAuction.setBidToken</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#331">FastLaneAuction.setBidToken</a></td>
+              <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#219">FastLaneAuction.setFastlaneFee</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#318">FastLaneAuction.setFastlaneFee</a></td>
               <td class="coverFnHi">6</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#204">FastLaneAuction.setMinimumAutoShipThreshold</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#302">FastLaneAuction.setMinimumAutoShipThreshold</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#192">FastLaneAuction.setMinimumBidIncrement</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#286">FastLaneAuction.setMinimumBidIncrement</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#345">FastLaneAuction.setOffchainCheckerDisabledState</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#479">FastLaneAuction.setOffchainCheckerDisabledState</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#198">FastLaneAuction.setOps</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#294">FastLaneAuction.setOps</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#186">FastLaneAuction.setPausedState</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#278">FastLaneAuction.setPausedState</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#210">FastLaneAuction.setResolverMaxGasPrice</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#310">FastLaneAuction.setResolverMaxGasPrice</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#178">FastLaneAuction.setValidatorPreferences</a></td>
-              <td class="coverFnHi">4</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#346">FastLaneAuction.setStarter</a></td>
+              <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#310">FastLaneAuction.startAuction</a></td>
-              <td class="coverFnHi">27</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#267">FastLaneAuction.setValidatorPreferences</a></td>
+              <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#475">FastLaneAuction.submitBid</a></td>
-              <td class="coverFnHi">40</td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#436">FastLaneAuction.startAuction</a></td>
+              <td class="coverFnHi">29</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#360">FastLaneAuction.withdrawStuckERC20</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#623">FastLaneAuction.submitBid</a></td>
+              <td class="coverFnHi">41</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#500">FastLaneAuction.withdrawStuckERC20</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#349">FastLaneAuction.withdrawStuckNativeToken</a></td>
+              <td class="coverFn"><a href="FastLaneAuction.sol.gcov.html#486">FastLaneAuction.withdrawStuckNativeToken</a></td>
               <td class="coverFnHi">1</td>
             </tr>
   </table>
