--- a/report/contracts/index-sort-b.html
+++ b/report/contracts/index-sort-b.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">159</td>
-            <td class="headerCovTableEntry">162</td>
-            <td class="headerCovTableEntryHi">98.1 %</td>
+            <td class="headerCovTableEntry">182</td>
+            <td class="headerCovTableEntry">187</td>
+            <td class="headerCovTableEntryHi">97.3 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-07-27 12:21:00</td>
+            <td class="headerValue">2022-08-30 00:50:20</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">38</td>
-            <td class="headerCovTableEntry">39</td>
-            <td class="headerCovTableEntryHi">97.4 %</td>
+            <td class="headerCovTableEntry">43</td>
+            <td class="headerCovTableEntry">44</td>
+            <td class="headerCovTableEntryHi">97.7 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">66</td>
-            <td class="headerCovTableEntry">72</td>
-            <td class="headerCovTableEntryHi">91.7 %</td>
+            <td class="headerCovTableEntry">68</td>
+            <td class="headerCovTableEntry">80</td>
+            <td class="headerCovTableEntryMed">85.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -82,16 +82,28 @@
       <td class="tableHead" colspan=2>Branches <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by branch coverage" title="Sort by branch coverage" border=0></span></td>
     </tr>
     <tr>
+      <td class="coverFile"><a href="FastLaneFactory.sol.gcov.html">FastLaneFactory.sol</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=58 height=10 alt="58.3%"><img src="../snow.png" width=42 height=10 alt="58.3%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">58.3&nbsp;%</td>
+      <td class="coverNumLo">7 / 12</td>
+      <td class="coverPerLo">66.7&nbsp;%</td>
+      <td class="coverNumLo">2 / 3</td>
+      <td class="coverPerLo">33.3&nbsp;%</td>
+      <td class="coverNumLo">2 / 6</td>
+    </tr>
+    <tr>
       <td class="coverFile"><a href="FastLaneAuction.sol.gcov.html">FastLaneAuction.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=98 height=10 alt="98.1%"><img src="../snow.png" width=2 height=10 alt="98.1%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=100 height=10 alt="100.0%"></td></tr></table>
       </td>
-      <td class="coverPerHi">98.1&nbsp;%</td>
-      <td class="coverNumHi">159 / 162</td>
-      <td class="coverPerHi">97.4&nbsp;%</td>
-      <td class="coverNumHi">38 / 39</td>
-      <td class="coverPerHi">91.7&nbsp;%</td>
-      <td class="coverNumHi">66 / 72</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">175 / 175</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">41 / 41</td>
+      <td class="coverPerMed">89.2&nbsp;%</td>
+      <td class="coverNumMed">66 / 74</td>
     </tr>
   </table>
   </center>
