--- a/report/index-sort-l.html
+++ b/report/index-sort-l.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">159</td>
-            <td class="headerCovTableEntry">162</td>
-            <td class="headerCovTableEntryHi">98.1 %</td>
+            <td class="headerCovTableEntry">182</td>
+            <td class="headerCovTableEntry">212</td>
+            <td class="headerCovTableEntryMed">85.8 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-07-27 12:21:00</td>
+            <td class="headerValue">2022-08-30 00:50:20</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">38</td>
-            <td class="headerCovTableEntry">39</td>
-            <td class="headerCovTableEntryHi">97.4 %</td>
+            <td class="headerCovTableEntry">43</td>
+            <td class="headerCovTableEntry">48</td>
+            <td class="headerCovTableEntryMed">89.6 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">66</td>
-            <td class="headerCovTableEntry">72</td>
-            <td class="headerCovTableEntryHi">91.7 %</td>
+            <td class="headerCovTableEntry">68</td>
+            <td class="headerCovTableEntry">84</td>
+            <td class="headerCovTableEntryMed">81.0 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -82,16 +82,40 @@
       <td class="tableHead" colspan=2>Branches <span class="tableHeadSort"><a href="index-sort-b.html"><img src="updown.png" width=10 height=14 alt="Sort by branch coverage" title="Sort by branch coverage" border=0></a></span></td>
     </tr>
     <tr>
+      <td class="coverFile"><a href="test/index.html">test</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 2</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 1</td>
+      <td class="coverPerHi">-</td>
+      <td class="coverNumHi">0 / 0</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="script/index.html">script</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 23</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 3</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 4</td>
+    </tr>
+    <tr>
       <td class="coverFile"><a href="contracts/index.html">contracts</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=98 height=10 alt="98.1%"><img src="snow.png" width=2 height=10 alt="98.1%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=97 height=10 alt="97.3%"><img src="snow.png" width=3 height=10 alt="97.3%"></td></tr></table>
       </td>
-      <td class="coverPerHi">98.1&nbsp;%</td>
-      <td class="coverNumHi">159 / 162</td>
-      <td class="coverPerHi">97.4&nbsp;%</td>
-      <td class="coverNumHi">38 / 39</td>
-      <td class="coverPerHi">91.7&nbsp;%</td>
-      <td class="coverNumHi">66 / 72</td>
+      <td class="coverPerHi">97.3&nbsp;%</td>
+      <td class="coverNumHi">182 / 187</td>
+      <td class="coverPerHi">97.7&nbsp;%</td>
+      <td class="coverNumHi">43 / 44</td>
+      <td class="coverPerMed">85.0&nbsp;%</td>
+      <td class="coverNumMed">68 / 80</td>
     </tr>
   </table>
   </center>
